--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,17 @@
   background-color: var(--color-background);
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   display: flex;
